# snaze

./: CMakeLists.txt  LICENSE  README.md  author.md
.cache/clangd/index/: data.cpp.91C09ECD4957C811.idx  data.h.47B8A26673162A88.idx  level.cpp.F79639EB884F22E9.idx  level.h.8D2EEFD43DAF489B.idx  main.cpp.E4EAE44C0CB3A4A6.idx  player.cpp.AFABC75AA9BC602F.idx  player.h.23C03F433ECF7ABC.idx  snake.cpp.B40E45B3C96AB346.idx  snake.h.21EC6F360D87FAEE.idx  snakeGame.cpp.813A59883D285823.idx  snakeGame.h.7D0BCD265839C798.idx
config/: snaze.ini
playground/: a.out  maze_gpt.cpp  maze_solver.cpp  move_chars.cpp  move_snake.cpp  read_data.cpp
playground/output/: maze_gpt  move_chars  move_snake  read_data
src/: data.cpp  data.h  level.cpp  level.h  main.cpp  player.cpp  player.h  snake.cpp  snake.h  snakeGame.cpp  snakeGame.h
